changed the title

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       crossorigin="anonymous"
     />
     <script src="https://kit.fontawesome.com/47f0c34bb1.js" crossorigin="anonymous"></script>
-    <title>Homework</title>
+    <title>SheCodesWeatherApp</title>
     <meta charset="UTF-8" />
     <link ref="css" href="src/styles.css" />
+    
   </head>
 
   <body>
