--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
     </div>
     <br/>
+    <footer><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp">Open-source code</a> by Ekaterina Kirilicheva</footer>
 
 
 </div>
