--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <script src="index.js"></script>
+    
     <div class="container">
       <div class="weather-app">
     </br>
@@ -46,5 +46,6 @@
 
 
 </div>
+<script src="js/index.js"></script>
   </body>
 </html>
