--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <br/>
-    <footer><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp">Open-source code</a> by Ekaterina Kirilicheva</footer>
+    <footer><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp" target="_blank">Open-source code</a> by Ekaterina Kirilicheva</footer>
 
 
 </div>
