--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <script src="https://kit.fontawesome.com/47f0c34bb1.js" crossorigin="anonymous"></script>
     <title>SheCodesWheatherApp</title>
     <meta charset="UTF-8" />
-    <link ref="css" href="src/styles.css" />
+    
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <link rel="stylesheet" href="src/styles.css">
   </head>
 
   <body>
@@ -45,6 +46,7 @@
     <footer><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp" target="_blank">Open-source code</a> by Ekaterina Kirilicheva</footer>
 
 
+</div>
 </div>
 <script src="src/index.js"></script>
   </body>
