moved the source link outside the frame

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body>
     
     <div class="container">
+      <div class="weather-app-wrapper">
       <div class="weather-app">
+        
     </br>
  <form id="form">
    <input  type="text" placeholder = "Enter city" class="form-control"/>
@@ -42,11 +44,11 @@
         <li> Wind: <span id="wind"></span> km/h </li> </ul>
       </div>
     </div>
-    <br/>
-    <footer><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp" target="_blank">Open-source code</a> by Ekaterina Kirilicheva</footer>
+    </div>
+  <small><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp" target="_blank">Open-source code</a> by Ekaterina Kirilicheva</small>  
 
 
-</div>
+
 </div>
 <script src="src/index.js"></script>
   </body>
