added farenheit link

--- a/index.html
+++ b/index.html
@@ -38,17 +38,14 @@
      <li> <span id = "description"></span></li> </ul>
     </div>
      <div class="col"> 
-     <ul> <li > <span id = "temperature"> </span>°C 
+     <ul> <li > <span id = "temperature"> </span><span class = "units">°C | <a href ="#">F</a></span> 
        </li> 
         <li> Humidity: <span id = "humidity"> </span>%</li>
         <li> Wind: <span id="wind"></span> km/h </li> </ul>
       </div>
     </div>
     </div>
-  <small><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp" target="_blank">Open-source code</a> by Ekaterina Kirilicheva</small>  
-
-
-
+  <small class="footer"><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp" target="_blank">Open-source code</a> by Ekaterina Kirilicheva</small>  
 </div>
 <script src="src/index.js"></script>
   </body>
