--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
   <input class="current-button" type="button" value="Current"/> </form>
 </br>
       <div class ="row">
-    <div class="col">  <h1 id = "city"></h1>
+    <div class="col"> 
+                
+              <img src="" alt="Clear" id="icon" />  <h1 id = "city"></h1>
       <ul> <li id = "local-time"> </li >
  
      <li> <span id = "description"></span></li> </ul>
     </div>
      <div class="col"> 
+     <br/>
+     <br/>
+     <br/>
+     <br/>
      <ul> <li > <span id = "temperature"> </span><span class = "units">°C | <a href ="#">F</a></span> 
        </li> 
         <li> Humidity: <span id = "humidity"> </span>%</li>
