added unit converter (celsius & fahrenheit)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    
      <div class="col"> 
     <br/>
-     <ul> <li > <span id = "temperature"> </span><span class = "units">°C | <a href ="#">F</a></span> 
+     <ul> <li > <span id = "temperature"> </span><span class = "units"><a href="#" id = "celcius-link" class = "active">°C </a>| <a href ="#" id = "fahrenheit-link">F</a></span> 
        </li> 
         <li> Humidity: <span id = "humidity"> </span>%</li>
         <li> Wind: <span id="wind"></span> km/h </li> </ul>
