created html & css for the first day of 5-day-weather-forecast (using fake data for now)

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         <li> Wind: <span id="wind"></span> km/h </li> </ul>
       </div>
     </div>
+    <div class="weather-forecast">
+      <div class="row">
+        <div class="col-2">
+          <div class="weather-forecast-date">Thu</div>
+          <img src="http://openweathermap.org/img/wn/04d@2x.png" alt="" width="42"/>
+          <div class = "weather-forecast-temperature"><span class="weather-forecast-max">18°</span><span class="weather-forecast-min"> 12°</span></div>
+        </div>
+      </div>
+
+    </div>
     </div>
   </br>
   <small class="footer"><a href="https://github.com/ekaterinaKirilicheva/sheCodesWeatherApp" target="_blank">Open-source code</a> by Ekaterina Kirilicheva</small>  
